# VAC-protocol

./: .dockerignore  .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.toml.example  docker-compose.yml
adapters/: ADAPTERS.md
control-plane/: Cargo.toml  Dockerfile
control-plane/src/: main.rs
demo-api/: Cargo.toml  Dockerfile  README.md
demo-api-python/: Dockerfile  README.md  main.py
demo-api/src/: main.rs
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  INTEGRATION_LANGCHAIN.md  OBSERVABILITY.md  SECURITY.md  VAC_VS_ALTERNATIVES.md
examples/: biscuit_spike.rs  langgraph_vac.py
k8s/: sidecar-deployment.yaml
mcp-server/: README.md  server.py
sdks/python/: README.md  example.py  pyproject.toml  vac_client.py
sdks/python/tests/: test_vac_client.py
sidecar/: Cargo.toml  Dockerfile
sidecar/examples/: create_test_biscuit.rs  generate_test_keys.rs
sidecar/src/: adapter.rs  biscuit.rs  config.rs  delegation.rs  error.rs  heartbeat.rs  lib.rs  main.rs  policy.rs  proxy.rs  rate_limit.rs  receipt.rs  replay_cache.rs  revocation.rs  security.rs  state.rs
sidecar/tests/: delegation_chain_integration_test.rs  delegation_depth_test.rs  heartbeat_test.rs  integration_test.rs  revocation_test.rs  security_test.rs  test_config.toml  wasm_adapter_test.rs
sidecar/tests/common/: mod.rs
