[package]
name = "vac-control-plane"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/certainly-param/VAC-protocol"
description = "VAC control plane: mock server for heartbeat, revocation, and kill switch operations"
readme = "../README.md"
keywords = ["vac", "security", "control-plane", "revocation"]
categories = ["web-programming::http-server"]

[dependencies]
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4"] }
hex = "0.4"

[[bin]]
name = "vac-control-plane"
path = "src/main.rs"
