[package]
name = "vac-demo-api"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/certainly-param/VAC-protocol"

[dependencies]
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "vac-demo-api"
path = "src/main.rs"
