[package]
name = "vac-sidecar"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/certainly-param/VAC-protocol"

[dependencies]
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
biscuit-auth = "3.1"
ed25519-dalek = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4"] }
reqwest = { version = "0.11", features = ["json"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
dotenv = "0.15"
hex = "0.4"
sha2 = "0.10"
base64 = "0.21"
wasmtime = "19.0"
wasmtime-wasi = "19.0"
clap = { version = "4.4", features = ["derive"] }
config = "0.14"
rand = "0.8"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
libc = "0.2"
dashmap = "5.5"

[dev-dependencies]
wiremock = "0.6"
wat = "1.0"
tempfile = "3.8"

[[bin]]
name = "vac-sidecar"
path = "src/main.rs"
