[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vac-client"
version = "0.1.0"
description = "Python client for VAC (Verifiable Agentic Credential) Protocol"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["vac", "security", "ai-agents", "credentials", "biscuit"]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
requests = ["requests>=2.28.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/certainly-param/VAC-protocol"
Documentation = "https://github.com/certainly-param/VAC-protocol/blob/main/docs/INTEGRATION_LANGCHAIN.md"
Repository = "https://github.com/certainly-param/VAC-protocol"
Issues = "https://github.com/certainly-param/VAC-protocol/issues"

[tool.setuptools]
py-modules = ["vac_client"]
